# fast3d-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test_firefox.sh
.github/workflows/: validate.yml
examples/: Cargo.toml  README.md
examples/common/: Cargo.toml
examples/common/src/: framework.rs
examples/src/: framework.rs  lib.rs  main.rs
examples/src/triangle/: README.md  mod.rs
examples/src/triangle/resources/: mod.rs
examples/static/: index.html
examples/triangle/: Cargo.toml  README.md  main.rs  vertices.rs
examples/triangle/src/: gbi.rs  gu.rs  main.rs
fast3d/: Cargo.toml
fast3d-gbi/: Cargo.toml
fast3d-gbi/src/: defines.rs  gbi.rs  gu.rs  lib.rs
fast3d-gbi/src/defines/: color_combiner.rs  f3d.rs  f3dex2.rs  render_mode.rs
fast3d-gbi/src/gbi/: dma.rs  rdp.rs  rsp.rs
fast3d-glium-renderer/: Cargo.toml
fast3d-glium-renderer/src/: glium_device.rs  glium_renderer.rs  lib.rs  opengl_program.rs
fast3d-wgpu-renderer/: Cargo.toml
fast3d-wgpu-renderer/src/: defines.rs  lib.rs  wgpu_device.rs  wgpu_program.rs  wgpu_renderer.rs
fast3d/src/: gbi.rs  graphics.rs  lib.rs  output.rs  rcp.rs  rdp.rs  rsp.rs
fast3d/src/gbi/: common.rs  defines.rs  f3d.rs  f3dex2.rs  f3dex2e.rs  f3dzex2.rs  macros.rs  utils.rs
fast3d/src/models/: color_combiner.rs  mod.rs  texture.rs  tile_descriptor.rs
fast3d/src/output/: gfx.rs  models.rs  texture_cache.rs
fast3d/src/utils/: color_combiner.rs  texture_cache.rs
fast3d/tests/: test.rs
gbi-assembler/: Cargo.toml
gbi-assembler/src/: gbi.rs  gu.rs  lib.rs
gbi-assembler/src/gbi/: rdp.rs  rsp.rs
xtask/src/: main.rs  run_wasm.rs  vendor_web_sys.rs
