[workspace]
members = [
    "fast3d",
    "fast3d-glium-renderer",
    "fast3d-wgpu-renderer",
    "examples/*",
]
default-members = [
    "examples/*",
    "fast3d",
    "fast3d-glium-renderer",
    "fast3d-wgpu-renderer",
]

[workspace.package]
edition = "2021"
version = "0.4.2"
description = "A Rust library for N64 Fast3D Graphics Rendering"
homepage = "https://crates.io/crates/fast3d"
repository = "https://github.com/retrofoundry/fast3d-rs"
keywords = ["n64", "gbi", "graphics", "rendering", "fast3d"]
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies.f3dglium]
package = "fast3d-glium-renderer"
path = "./fast3d-glium-renderer"
version = "0.4.2"

[workspace.dependencies.f3dwgpu]
package = "fast3d-wgpu-renderer"
path = "./fast3d-wgpu-renderer"
version = "0.4.2"

[workspace.dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.1", features = ["approx", "bytemuck"] }
log = "0.4"
fast3d = { version = "0.4.2", path = "./fast3d" }
rustc-hash = "1.1"
wgpu = { version = "0.16", features = ["glsl"] }
naga = "0.12.2"
glium = "0.32.1"

