[workspace]
members = [
    "fast3d",
    "fast3d-gbi",
    "fast3d-glium-renderer",
    "fast3d-wgpu-renderer",
    "examples/*",
    "run-wasm",
]
default-members = [
    "examples/*",
    "fast3d",
    "fast3d-gbi",
    "fast3d-glium-renderer",
    "fast3d-wgpu-renderer",
]

workspace.resolver = "1"

[workspace.package]
edition = "2021"
version = "0.5.0"
authors = ["fast3d-rs developers"]
description = "A Rust library for N64 Fast3D Graphics Rendering"
homepage = "https://crates.io/crates/fast3d"
repository = "https://github.com/retrofoundry/fast3d-rs"
keywords = ["n64", "gbi", "graphics", "rendering", "fast3d"]
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies.f3dglium]
package = "fast3d-glium-renderer"
path = "./fast3d-glium-renderer"
version = "0.5.0"

[workspace.dependencies.f3dwgpu]
package = "fast3d-wgpu-renderer"
path = "./fast3d-wgpu-renderer"
version = "0.5.0"

[workspace.dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.1", features = ["approx", "bytemuck"] }
log = "0.4"
fast3d-gbi = { version = "0.5.0", path = "fast3d-gbi" }
fast3d = { version = "0.5.0", path = "./fast3d" }
fast3d-example = { version = "0.5.0", path = "./examples/common" }
rustc-hash = "1.1"
wgpu = { version = "0.17", features = ["glsl"] }
naga = "0.13"
glium = "0.32.1"
env_logger = "0.10.0"
winit = { version = "0.28.7", features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
pollster = "0.3.0"
lru = "0.12.3"
num_enum = "0.7.0"
bitflags = "2.3.3"
async-executor = "1"
pigment64 = "0.4.3"
nohash-hasher = "0.2.0"

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3"
web-sys = "0.3.64"

[patch.crates-io]
