[package]
name = "fast3d-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Fast3D examples"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[[example]]
name = "triangle"
path = "triangle/main.rs"

[features]
webgl = ["wgpu/webgl"]

[dependencies]
cfg-if = "1"
fast3d.workspace = true
fast3d-gbi.workspace = true
fast3d-wgpu.workspace = true
log.workspace = true
pigment64.workspace = true
pollster.workspace = true
web-time = "0.2.4"
wgpu.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
fern = "0.6"
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "ImageData",
    "Response",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
