[package]
name = "fast3d-gbi"
description = "F3D GBI Assembler"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["f3dex2"]

f3dex2 = []
f3dex2e = []

gbifloats = []
hardware_version_1 = []

[dependencies]
num_enum.workspace = true
bitflags.workspace = true
pigment64.workspace = true
