[package]
name = "fast3d-glium-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Glium renderer for fast3d-rs"
homepage = "https://crates.io/crates/fast3d-glium-renderer"
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
glam.workspace = true
log.workspace = true
fast3d.workspace = true
rustc-hash.workspace = true
glium.workspace = true
gbi-assembler.workspace = true
