[package]
name = "fast3d"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["f3dex2"]

f3d = []
f3dex2 = []
f3dex2e = ["gbifloats", "f3dex2"]
f3dzex2 = ["f3dex2"]

gbifloats = []

[dependencies]
bytemuck.workspace = true
farbe = "0.2.0"
glam.workspace = true
log.workspace = true
rustc-hash.workspace = true
lru = "0.10.1"
num_enum = "0.6.1"
bitflags = "1.3.2"
nohash-hasher = "0.2.0"
