[package]
name = "fast3d"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["f3dex2"]

f3d = []
f3dex2 = []
f3dex2e = ["gbifloats", "f3dex2"]
f3dzex2 = ["f3dex2"]

gbifloats = []

[dependencies]
bytemuck.workspace = true
farbe.workspace = true
glam.workspace = true
log.workspace = true
rustc-hash.workspace = true
lru.workspace = true
num_enum.workspace = true
bitflags.workspace = true
nohash-hasher = "0.2.0"
fast3d-gbi.workspace = true
pigment.workspace = true
