[package]
name = "fast3d-example"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Common example code"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license-file.workspace = true
publish = false

[dependencies]
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
wgpu.workspace = true
env_logger.workspace = true
winit.workspace = true
pollster.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
#hal = { workspace = true, optional = true }
# We need these features in the framework examples and tests
web-sys = { workspace = true, features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d"
] }
