[package]
name = "fast3d-triangle-example"
version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true
description = "fast3d triangle example"
publish = false

[[bin]]
name = "triangle"
path = "src/main.rs"

[dependencies]
fast3d.workspace = true
f3dwgpu.workspace = true
fast3d-example.workspace = true
wgpu.workspace = true
winit.workspace = true
gbi-assembler.workspace = true
pigment.workspace = true
